--- a/index.html
+++ b/index.html
@@ -1278,7 +1278,7 @@
                     <div class="contact-info-grid">
                         <div class="contact-info-item reveal-on-scroll"><i class="fas fa-mobile-alt"></i><h4>Call Me</h4><a href="tel:6381215568">6381215568</a></div>
                         <div class="contact-info-item reveal-on-scroll delay-1"><i class="fas fa-at"></i><h4>Email Me</h4><a href="mailto:hemanthkumar.25mea@licet.ac.in">hemanthkumar.25mea@licet.ac.in</a></div>
-                        <div class="contact-info-item reveal-on-scroll delay-2"><i class="fab fa-linkedin-in"></i><h4>LinkedIn</h4><a href="https://linkedin.com/in/hemanth-kumar" target="_blank" rel="noopener noreferrer">linkedin.com/in/hemanth-kumar</a></div>
+                        <div class="contact-info-item reveal-on-scroll delay-2"><i class="fab fa-linkedin-in"></i><h4>LinkedIn</h4><a href="https://www.linkedin.com/in/hemanth-kumar-licet" target="_blank" rel="noopener noreferrer">linkedin.com/in/hemanth-kumar</a></div>
                     </div>
                      <a href="mailto:hemanthkumar.25mea@licet.ac.in" class="cta-button">Send A Message</a>
                 </div>
